modify main website background image

--- a/templates/doc.html
+++ b/templates/doc.html
@@ -19,6 +19,7 @@
     
       <!-- Navigation / panel selection in the middle -->
       <nav class="nav-links">
+        <h3>Control Panel</h3>
         <a href="#" id="doctor-link">Doctor</a>
         <a href="#" id="patient-link">Patient</a>
       </nav>
@@ -102,8 +103,8 @@
         />
         <button id="searchButton">Search</button>
         <!-- Doctor/Patient Filter Buttons -->
-        <button id="doctorBtn">Doctor Filter</button>
-        <button id="patientBtn">Patient Filter</button>
+        <button id="doctorBtn">Doctor</button>
+        <button id="patientBtn">Patient</button>
       </div>
   
       <!-- Content to show Doctor/Patient cards -->
