--- a/templates/index.html
+++ b/templates/index.html
@@ -42,33 +42,36 @@
         </section>
     </section>
 
+
     <div class="demo-container">
         <section class="demo demo1">
             <img src="../static/bg2.jpg" alt="Hospital Image">
             <div class="demo_message">
-                <h2>Description 1</h2>
-                <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+                <h3>Step 1 Login to the system</h3>
+                <p>Click the Login button in the upper right corner of the home page. If you are a staff member at a nurse's station, you will be redirected to the Doctor Management interface; If you are a patient or a patient's family member, you will be redirected to the Patient Advisement interface.       
+                    </p>
             </div>
         </section>
         <section class="demo demo2">
             <img src="../static/bg2.jpg" alt="Hospital Image">
             <div class="demo_message">
-                <h2>Description 2</h2>
-                <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+                <h3>Step 2: Add/Edit Patient Information</h3>
+                <p>After logging in, you will be directed to the appropriate interface based on your role. If you are a patient or a patient's family member, you will be prompted to enter the required patient information.</p>
             </div>
         </section>
         <section class="demo demo3">
             <img src="../static/bg2.jpg" alt="Hospital Image">
             <div class="demo_message">
-                <h2>Description 3</h2>
-                <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+                <h3>Step 3: Check Doctor Status</h3>
+                <p>You may want to check out Doctor Status page. Here, you can view real-time availability of doctors, including doctor's name, portrait, and workload.
+                </p>
             </div>
         </section>
         <section class="demo demo4">
             <img src="../static/bg2.jpg" alt="Hospital Image">
             <div class="demo_message">
-                <h2>Description 4</h2>
-                <p>Deep RL Model <br> Your gateway to seamless patient management</p>
+                <h3>Step 4: Check Patient Queuing Information</h3>
+                <p>If you are a patient or patient's family member, the system will provide details of the patient queue after logging in. If any priority cases arise, the system will dynamically adjust the queue and notify affected patients. </p>
             </div>
         </section>
     </div>
