--- a/static/style.css
+++ b/static/style.css
@@ -71,7 +71,7 @@ header a:hover {
     background-color: antiquewhite;
     color: white;
     height: 105vh;
-    background-image: url("../static/emergency1_dark.jpg");
+    background-image: url("../static/front_page_1_cut.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -158,8 +158,7 @@ footer {
 .demo-container {
     height: 200vh;
     position: relative;
-    background:
-        url("../static/front_page_2.png") no-repeat center top;
+    background-color: #3e3b32;
     background-size: cover;
 }
 
@@ -177,30 +176,30 @@ footer {
 
 .demo1 {
     z-index: 1;
-    background-color: #f2d388;
+    background-color: #615d50;
 }
 
 .demo2 {
     z-index: 2;
-    background-color: #c7efd9;
+    background-color: #9f977f;
 }
 
 .demo3 {
     z-index: 3;
-    background-color: #fad4d4;
+    background-color: #d7c9a1;
 }
 
 .demo4 {
     z-index: 4;
-    background-color: #0056b3;
+    background-color: #f7ebb5;
 }
 
 .demo img {
-    width: 50%;
+    width: 40%;
 }
 
 .demo_message {
-    width: 50%;
+    width: 60%;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -208,14 +207,18 @@ footer {
     justify-content: center;
 }
 
-.demo_message h2{
-    font-size: 50px;
+.demo_message h3 {
+    font-size: 30px;
     margin-bottom: 30px;
 }
 
 .demo_message p {
+    margin: 15px;
+    font-size: 15px;
+}
+
+.demo_message p {
     font-size: 20px;
-    text-align: center;
     line-height: 2em;
 }
 
@@ -307,7 +310,11 @@ footer {
     padding-left: 20px;
     margin-bottom: 20px;
   }
-  
+  .nav-links h3 {
+    color: #ffffff;
+    padding: 10px;
+  }
+
   .nav-links a {
     color: #ffffff;
     text-decoration: none;
