--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,11 @@ header {
     z-index: 9999;
 }
 
+.logo {
+    height: 50px;
+    margin-right: 15px;
+}
+
 h1 {
     color: white;
     position: relative;
