--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,14 @@
         <li><a href="#explore">Home</a></li>
         <li><a href="https://github.com/wang2653/Building-an-Intelligent-Job-Scheduler-for-Optimized-Request-Assignment">About</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="/login">Login</a></li>
+        <li class="dropdown">
+            <a href="#">Login</a>
+            <ul class="dropdown-content">
+              <li><a href="/login">Doctor</a></li>
+              <li><a href="#">Patient</a></li>
+            </ul>
+        </li>
+
     </ul>
     </nav>
     </header>
